# indrz-be

./:  .pre-commit-config.yaml  .codeclimate.yml  .dockerignore  .env-example  .env.example  .gitignore  .gitlab-ci-upgrade-geoserver.yml  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  build  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-production.yml  docker-compose.dev..yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sample.env
backend/indrz/: .initialized  __init__.py  load_data.sh  pytest.ini  schema.yml  setup.cfg
backend/indrz/api/: search.py  share.py  share_urls.py
backend/indrz/bookway/: admin.py  apps.py  models.py  readme.md  serializers.py  urls.py  views.py
backend/indrz/buildings/: api.py  models.py  serializers.py  validators.py
backend/indrz/campus/: admin.py  serializers.py  views.py
backend/indrz/dxf_loader/: README.md  __init__.py  __main__.py  admin.py  apps.py  (+9 more)
indrz/: .coveragerc  .env-example  .env.example  .initialized  AUTHORS.md  Dockerfile  MANIFEST.in  __init__.py  docker-compose-OLD.yml  docker-compose.yml  entry_point.py  load_data.sh  manage.py  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  wsgi.py
indrz/api/: search.py  search_aau.py  search_tu.py  share_urls.py  tu_campus_api.py  urls.py  views.py
indrz/buildings/: admin.py  api.py  models.py  serializers.py  urls.py  views.py  viewsets.py
indrz/campus/: api.py  apps.py  models.py  serializers.py
indrz/conference/: models.py
indrz/docs/: release-process.md
indrz/health/: apps.py  urls.py  views.py
indrz/homepage/: aau_campus_api.py  bach_calls.py  search_aau.py  serializer.py  urls.py  views.py
indrz/indrz/: .env_demo  __init__.py  production-wsgi.py  routers.py  settings.py  urls.py  wsgi.py
indrz/landscape/: admin.py  models.py  views.py
indrz/maps/: urls.py  views.py
indrz/organizations/: models.py
indrz/permissions/: permissions.py  service.py
indrz/poi_manager/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
indrz/requirements/: base.txt  local.txt  production.txt  requirements.txt  requirements_dev.txt  requirements_production.txt
indrz/routing/: models.py  readme.md  routing_node_networklines.py  urls.py  views.py
indrz/settings/: .env_demo  __init__.py  common.py  common_settings.py  dev_settings.py  development.py  example-env.env  local.py.example.py  production.py  production_settings.py  secret_settings-demo.py  secret_settings.py  settings.py  test_settings.py
indrz/tests/: conftest.py  factories.py  one-off.py  test_buildings_models.py  test_buildings_views.py
indrz/users/: __init__.py  admin.py  api.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
(+731 files in other folders)
